--- a/css/reading.css
+++ b/css/reading.css
@@ -7,6 +7,7 @@ p {
   -moz-transition:all .2s ease-in-out;
   -webkit-transition:all .2s ease-in-out;
   transition:all .2s ease-in-out;
+  display: inline;
 }
 
 p:focus {
