--- a/css/reading.css
+++ b/css/reading.css
@@ -1,4 +1,9 @@
-@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro);
+@font-face {
+  font-family: 'Source Sans Pro';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Source Sans Pro'), local('SourceSansPro-Regular'), url(https://fonts.gstatic.com/s/sourcesanspro/v9/ODelI1aHBYDBqgeIAH2zlNV_2ngZ8dMf8fLgjYEouxg.woff2) format('woff2');
+}
 
 p {
   font-family: 'Source Sans Pro', sans-serif, 'Verdana', 'Calibri';
