--- a/css/reading.css
+++ b/css/reading.css
@@ -5,6 +5,11 @@
   src: local('Open Sans'), local('OpenSans'), url(https://fonts.gstatic.com/s/opensans/v13/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
 }
 
+body {
+  background: #000;
+  color: #FFF;
+}
+
 p {
   font-family: 'Source Sans Pro', sans-serif, 'Verdana', 'Calibri';
   font-size: 0.75em;
@@ -81,6 +86,5 @@ small {
 }
 
 small:focus {
-  font-size: 1.2em;
-  font-weight: 900;
+  font-size: 1.8em;
 }
