--- a/css/reading.css
+++ b/css/reading.css
@@ -8,6 +8,7 @@
 body {
   background: #000;
   color: #FFF;
+  padding: 0.5em;
 }
 
 p {
@@ -22,6 +23,7 @@ p {
 
 p:focus {
   font-size:1.5em;
+  padding: 1em;
 }
 
 h1 {
@@ -39,6 +41,7 @@ h1 {
 h1:focus {
   font-size: 2em;
   text-decoration-style: solid;
+  padding: 1em;
 }
 
 h2 {
@@ -56,6 +59,7 @@ h2 {
 h2:focus {
   font-size: 1.85em;
   font-style:unset;
+  padding: 1em;
 }
 
 h3 {
@@ -73,6 +77,7 @@ h3:focus {
   font-size: 1.75em;
   font-style: unset;
   text-decoration: underline;
+  padding: 1em;
 }
 
 small {
@@ -87,4 +92,5 @@ small {
 
 small:focus {
   font-size: 1.8em;
+  padding: 1em;
 }
