Testing js selection

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,3 +1,4 @@
 <link href="{{ site.baseurl }}/{{ site.url }}/css/reading.css" rel="stylesheet">
+<script src="{{ site.baseurl }}/{{ site.url }}/js/select_contols.js"></script>
 
 {{ content }}
