--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,4 +1,8 @@
+<head>
 <link href="{{ site.baseurl }}/{{ site.url }}/css/reading.css" rel="stylesheet">
 <script src="{{ site.baseurl }}/{{ site.url }}/js/select_controls.js"></script>
+</head>
 
+<body id="readable">
 {{ content }}
+</body>
