--- a/css/reading.css
+++ b/css/reading.css
@@ -47,6 +47,7 @@ h1:focus {
   font-size: 2em;
   text-decoration-style: solid;
   padding: 1em;
+  display: block;
 }
 
 h2 {
@@ -65,6 +66,7 @@ h2:focus {
   font-size: 1.85em;
   font-style:unset;
   padding: 1em;
+  display:block;
 }
 
 h3 {
@@ -83,6 +85,7 @@ h3:focus {
   font-style: unset;
   text-decoration: underline;
   padding: 1em;
+  display:block;
 }
 
 small {
@@ -98,4 +101,5 @@ small {
 small:focus {
   font-size: 1.8em;
   padding: 1em;
+  display:block;
 }
