--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,5 @@
 <head>
-<link href="{{ site.baseurl }}/{{ site.url }}/css/reading.css" rel="stylesheet">
-<script src="{{ site.baseurl }}/{{ site.url }}/js/select_controls.js"></script>
+<title>{{ site.title }}</title>
 </head>
 
 <body>
