--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,6 @@
 <head>
 <title>{{ site.title }}</title>
+<link href="{{ site.baseurl }}/{{ site.url }}/css/reading.css" rel="stylesheet">
 </head>
 
 <body>
