--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,5 +9,5 @@
 </div>
 </body>
 <footer>
-  <small>&copy; James Milne, 2015</small>
+  <small tabindex="0">&copy; James Milne, 2015</small>
 </footer>
