--- a/css/reading.css
+++ b/css/reading.css
@@ -45,7 +45,8 @@ p:focus {
   font-size:1.5em;
   padding: 1em;
   display: block;
-  text-align:center;
+  margin-left:auto;
+  margin-right:auto;
 }
 
 h1 {
