--- a/css/reading.css
+++ b/css/reading.css
@@ -19,6 +19,26 @@ footer {
     margin-right:auto;
     margin-top:5em;
   }
+  
+  p:focus {
+    text-align:left;
+  }
+  
+  h1:focus {
+    text-align:left;
+  }
+  
+  h2:focus {
+    text-align:left;
+  }
+  
+  h3:focus {
+    text-align:center;
+  }
+  
+  small:focus {
+    text-align:center;
+  }
 }
 
 body {
@@ -45,7 +65,6 @@ p:focus {
   font-size:1.5em;
   padding: 1em;
   display: block;
-  text-align:center;
 }
 
 h1 {
@@ -65,7 +84,6 @@ h1:focus {
   text-decoration-style: solid;
   padding: 1em;
   display: block;
-  text-align:center;
 }
 
 h2 {
@@ -85,7 +103,6 @@ h2:focus {
   font-style:unset;
   padding: 1em;
   display:block;
-  text-align:center;
 }
 
 h3 {
@@ -105,7 +122,6 @@ h3:focus {
   text-decoration: underline;
   padding: 1em;
   display:block;
-  text-align:center;
 }
 
 small {
@@ -122,5 +138,4 @@ small:focus {
   font-size: 1.8em;
   padding: 1em;
   display:block;
-  text-align:center;
 }
