--- a/css/reading.css
+++ b/css/reading.css
@@ -19,6 +19,26 @@ footer {
     margin-right:auto;
     margin-top:5em;
   }
+  
+  p:focus {
+    text-align:center;
+  }
+  
+  h1:focus {
+    text-align:center;
+  }
+  
+  h2:focus {
+    text-align:center;
+  }
+  
+  h3:focus {
+    text-align:center;
+  }
+  
+  small:focus {
+    text-align:center;
+  }
 }
 
 @media (max-width:30em) {
